# Firmware

./: .gitignore  .gitmodules
components/vl53l0x-arduino/: VL53L0X.cpp
src/ESP32/: CMakeLists.txt  log.esp32.20250906152516.csv  log.esp32.20250906161138.csv  sdkconfig  sdkconfig.old
src/ESP32/main/: CMakeLists.txt  bleserver.cpp  bleserver.hpp  initial_operation.cpp  initial_operation.hpp  main.cpp
src/ExampleCode/BLE/: sdkconfig  sdkconfig.old
src/ExampleCode/BLE/main/: CMakeLists.txt  ble.cpp
src/ExampleCode/SG90/: CMakeLists.txt
src/ExampleCode/SG90/main/: CMakeLists.txt  SG90.cpp
src/ExampleCode/chassis/main/: CMakeLists.txt  chassis.cpp  idf_component.yml
src/ExampleCode/i2c/main/: CMakeLists.txt  i2c.cpp
src/STM32/.metadata/: .log4j2.xml  version.ini
src/STM32/.metadata/.plugins/org.eclipse.cdt.core/: main.1755237163210.pdom  main.1755251351587.pdom  main.language.settings.xml  master.language.settings.xml
src/STM32/.metadata/.plugins/org.eclipse.cdt.ui/: cHelpSettings.xml  dialog_settings.xml
src/STM32/.metadata/.plugins/org.eclipse.core.resources/: 1.snap  2.snap
src/STM32/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
src/STM32/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
src/STM32/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
src/STM32/main/: .cproject  .mxproject  main Debug.launch  main.ioc
src/STM32/main/Debug/: main.elf  main.list  main.map  makefile  objects.list
src/chassis/: CMakeLists.txt
src/chassis/main/: CMakeLists.txt  chassis.cpp
(+46 files in other folders)
